# southwestlistingstudio

./: .gitignore  AUTO_UPDATE.md  BUILD_WINDOWS.md  CATEGORY_SETUP.md  CLAUDE.md  README.md  build_dmg.sh  listing_studio.spec  listing_studio_mac.spec  pyproject.toml
.github/workflows/: build-and-release.yml
listing_studio/: __init__.py  __main__.py  _stdout_setup.py  app.py  config.py
listing_studio/core/: __init__.py  backup.py  category_suggest.py  credentials.py  db.py  fees.py  local_picker.py  models.py  nas.py  photo_host.py  photo_processor.py  polling.py  posting.py  preferences.py  schemas.py  seed.py  templates.py  updater.py
listing_studio/data/: seed_category_mappings.json
listing_studio/ui/: __init__.py  api.py
listing_studio/ui/static/css/: base.css  help.css  history.css  library.css  picker.css  results.css  settings.css  tokens.css  updates.css
listing_studio/ui/static/js/: api.js  categories.js  ebay_preview.js  form.js  help.js  history.js  library.js  main.js  new_template.js  picker.js  results.js  settings.js  state.js  updates.js  views.js
listing_studio/ui/templates/: index.html
scripts/: generate_icon.py
