[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "listing-studio"
version = "0.1.0"
description = "Cross-platform marketplace listing tool for Southwest Acoustics"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Southwest Acoustics"}
]
license = {text = "Proprietary"}
dependencies = [
    # GUI shell
    "pywebview>=5.0",                # Native desktop window wrapping HTML/JS UI

    # Backend API
    "fastapi>=0.110",                # In-process API for the UI to call
    "uvicorn[standard]>=0.27",       # ASGI server running embedded in pywebview

    # Database
    "sqlalchemy>=2.0",               # ORM over SQLite
    "alembic>=1.13",                 # Schema migrations

    # Pydantic for typed models
    "pydantic>=2.6",
    "pydantic-settings>=2.2",        # Config from .env / environment

    # Secrets storage
    "keyring>=24.3",                 # OS-native credential storage for OAuth tokens

    # HTTP client for platform APIs (Reverb, eBay, Etsy, Squarespace)
    "httpx>=0.27",                   # Async-capable HTTP client

    # Image handling
    "Pillow>=10.2",                  # Thumbnail generation, EXIF rotation, FB resize
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",                     # Lint + format
    "mypy>=1.8",
]
windows = [
    "pywin32>=306",                  # For DyMo printing and Windows-specific NAS handling (added later)
]

[project.scripts]
listing-studio = "listing_studio.__main__:main"

[tool.setuptools.packages.find]
include = ["listing_studio*"]

[tool.setuptools.package-data]
"listing_studio.ui" = ["static/**/*", "templates/**/*"]
"listing_studio.assets" = ["**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]                    # Line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
